web-app/src/app/pages/select-for-narration/select-for-narration.scss
:host {
  display: flex;
  flex-direction: column;
  height: 100dvh;
  box-sizing: border-box;
}

.title {
  text-align: center;
  margin: 0 auto;
}

mat-sidenav {
  min-width: 150px;
  max-width: 300px;
  padding: 8px 16px;
  border-right: 1px solid var(--mat-sys-outline-variant);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  overflow: auto;
  box-sizing: border-box;

  .toc-item {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 1rem;
    align-items: center;
  }
}

mat-sidenav-content {
  height: 100dvh;
}

.reader-viewport {
  position: relative;
  flex-grow: 1;
  width: 100% !important;
  max-width: var(--app-container-width);
  margin: 0 auto;

  ::ng-deep iframe {
    width: 100%;
    height: 100%;
    border: none;
  }
}

